--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,17 @@
 nav{
     background-color: #717171 !important;
-    position: fixed;
     z-index: 1000;
     width: 100%;
     top: 0;
 
+}
+
+.navbar {
+    background-color: #717171;
+}
+
+.navbar-toggler-icon{
+    color: white !important;
 }
 
 body {
